# c-stock

./: .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  CppCheckSuppressions.txt  README.md  doxyfile.in  requirements.txt  sonar-project.properties
cmake/: GoogleTest.cmake
include/stock/: stock.h
src/: main.c  stock.c
test/: CMakeLists.txt  StockTest.cpp  StockTest.h
